--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-jobs-api",
+  "name": "image-upload-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "rate-limiter": "^0.2.0",
+    "sharp": "^0.32.5",
     "swagger-ui-express": "^4.1.6",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
